feat: api: login & getUserMenu
